Handlers and repository with Swagger improvements
